product plans edit

--- a/app/views/factory/admin/addresses/_show_table.html.erb
+++ b/app/views/factory/admin/addresses/_show_table.html.erb
@@ -1,4 +1,4 @@
-<table class="ui very basic large table">
+<table class="table is-hoverable is-fullwidth">
   <thead>
     <tr>
       <th class="six wide">
@@ -9,27 +9,27 @@
   </thead>
   <tbody>
     <tr>
-      <td class="right aligned"><%= Address.human_attribute_name(:area) %></td>
+      <td class="has-text-right"><%= Address.human_attribute_name(:area) %></td>
       <td><%= @address.area %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= Address.human_attribute_name(:detail) %></td>
+      <td class="has-text-right"><%= Address.human_attribute_name(:detail) %></td>
       <td><%= @address.detail %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= Address.human_attribute_name(:contact) %></td>
+      <td class="has-text-right"><%= Address.human_attribute_name(:contact) %></td>
       <td><%= @address.contact %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= Address.human_attribute_name(:tel) %></td>
+      <td class="has-text-right"><%= Address.human_attribute_name(:tel) %></td>
       <td><%= @address.tel %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= Address.human_attribute_name(:post_code) %></td>
+      <td class="has-text-right"><%= Address.human_attribute_name(:post_code) %></td>
       <td><%= @address.post_code %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= Address.human_attribute_name(:source) %></td>
+      <td class="has-text-right"><%= Address.human_attribute_name(:source) %></td>
       <td><%= @address.source %></td>
     </tr>
   </tbody>
