--- a/app/views/factory/admin/part_plans/show.html.erb
+++ b/app/views/factory/admin/part_plans/show.html.erb
@@ -4,26 +4,26 @@
   <div class="active section">Show</div>
 </div>
 
-<table class="ui very basic large table">
+<table class="table is-hoverable is-fullwidth">
   <tbody>
     <tr>
-      <td class="right aligned"><%= PartPlan.human_attribute_name(:part_id) %></td>
+      <td class="has-text-right"><%= PartPlan.human_attribute_name(:part_id) %></td>
       <td><%= @part_plan.part_id %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= PartPlan.human_attribute_name(:start_at) %></td>
+      <td class="has-text-right"><%= PartPlan.human_attribute_name(:start_at) %></td>
       <td><%= @part_plan.start_at %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= PartPlan.human_attribute_name(:finish_at) %></td>
+      <td class="has-text-right"><%= PartPlan.human_attribute_name(:finish_at) %></td>
       <td><%= @part_plan.finish_at %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= PartPlan.human_attribute_name(:state) %></td>
+      <td class="has-text-right"><%= PartPlan.human_attribute_name(:state) %></td>
       <td><%= @part_plan.state %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= PartPlan.human_attribute_name(:purchased_count) %></td>
+      <td class="has-text-right"><%= PartPlan.human_attribute_name(:purchased_count) %></td>
       <td><%= @part_plan.purchased_count %></td>
     </tr>
   </tbody>
