--- a/app/views/factory/admin/product_items/show.html.erb
+++ b/app/views/factory/admin/product_items/show.html.erb
@@ -4,18 +4,18 @@
   <div class="active section">Show</div>
 </div>
 
-<table class="ui very basic large table">
+<table class="table is-hoverable is-fullwidth">
   <tbody>
     <tr>
-      <td class="right aligned"><%= ProductItem.human_attribute_name(:product_id) %></td>
+      <td class="has-text-right"><%= ProductItem.human_attribute_name(:product_id) %></td>
       <td><%= @product_item.product_id %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= ProductItem.human_attribute_name(:qr_code) %></td>
+      <td class="has-text-right"><%= ProductItem.human_attribute_name(:qr_code) %></td>
       <td><%= @product_item.qr_code %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= ProductItem.human_attribute_name(:qr_file) %></td>
+      <td class="has-text-right"><%= ProductItem.human_attribute_name(:qr_file) %></td>
       <td><%= image_tag @product_item.qr_file %></td>
     </tr>
   </tbody>
