--- a/app/views/factory/my/providers/_provider.html.erb
+++ b/app/views/factory/my/providers/_provider.html.erb
@@ -1,4 +1,4 @@
-<table class="ui very basic large table">
+<table class="table is-hoverable is-fullwidth">
   <thead>
   <tr>
     <th class="three wide"></th>
@@ -9,11 +9,11 @@
   </thead>
   <tbody>
   <tr>
-    <td class="right aligned"><%= Provider.human_attribute_name(:name) %></td>
+    <td class="has-text-right"><%= Provider.human_attribute_name(:name) %></td>
     <td><%= @provider.name %></td>
   </tr>
   <tr>
-    <td class="right aligned"></td>
+    <td class="has-text-right"></td>
     <td></td>
   </tr>
   </tbody>
