--- a/app/views/factory/admin/customs/show.html.erb
+++ b/app/views/factory/admin/customs/show.html.erb
@@ -4,22 +4,22 @@
   <div class="active section">Show</div>
 </div>
 
-<table class="ui very basic large table">
+<table class="table is-hoverable is-fullwidth">
   <tbody>
     <tr>
-      <td class="right aligned"><%= Custom.human_attribute_name(:name) %></td>
+      <td class="has-text-right"><%= Custom.human_attribute_name(:name) %></td>
       <td><%= @custom.name %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= Custom.human_attribute_name(:state) %></td>
+      <td class="has-text-right"><%= Custom.human_attribute_name(:state) %></td>
       <td><%= @custom.state %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= Custom.human_attribute_name(:qr_code) %></td>
+      <td class="has-text-right"><%= Custom.human_attribute_name(:qr_code) %></td>
       <td><%= @custom.qr_code %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= Custom.human_attribute_name(:ordered_at) %></td>
+      <td class="has-text-right"><%= Custom.human_attribute_name(:ordered_at) %></td>
       <td><%= @custom.ordered_at %></td>
     </tr>
   </tbody>
