--- a/app/views/factory/admin/parts/_show_table.html.erb
+++ b/app/views/factory/admin/parts/_show_table.html.erb
@@ -1,11 +1,11 @@
-<table class="ui very basic large table">
+<table class="table is-hoverable is-fullwidth">
   <tbody>
     <tr>
-      <td class="right aligned"><%= Part.human_attribute_name(:name) %></td>
+      <td class="has-text-right"><%= Part.human_attribute_name(:name) %></td>
       <td><%= @part.name %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= Part.human_attribute_name(:qr_prefix) %></td>
+      <td class="has-text-right"><%= Part.human_attribute_name(:qr_prefix) %></td>
       <td><%= @part.qr_prefix %></td>
     </tr>
   </tbody>
