--- a/app/views/factory/admin/product_taxons/show.html.erb
+++ b/app/views/factory/admin/product_taxons/show.html.erb
@@ -4,18 +4,18 @@
   <div class="active section">Show</div>
 </div>
 
-<table class="ui very basic large table">
+<table class="table is-hoverable is-fullwidth">
   <tbody>
     <tr>
-      <td class="right aligned"><%= ProductTaxon.human_attribute_name(:name) %></td>
+      <td class="has-text-right"><%= ProductTaxon.human_attribute_name(:name) %></td>
       <td><%= @product_taxon.name %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= ProductTaxon.human_attribute_name(:position) %></td>
+      <td class="has-text-right"><%= ProductTaxon.human_attribute_name(:position) %></td>
       <td><%= @product_taxon.position %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= ProductTaxon.human_attribute_name(:profit_margin) %></td>
+      <td class="has-text-right"><%= ProductTaxon.human_attribute_name(:profit_margin) %></td>
       <td><%= @product_taxon.profit_margin %></td>
     </tr>
   </tbody>
