--- a/app/views/factory/admin/trade_items/_show_table.html.erb
+++ b/app/views/factory/admin/trade_items/_show_table.html.erb
@@ -1,4 +1,4 @@
-<table class="ui very basic large table">
+<table class="table is-hoverable is-fullwidth">
   <thead>
     <tr>
       <th class="six wide">
@@ -9,23 +9,23 @@
   </thead>
   <tbody>
     <tr>
-      <td class="right aligned"><%= TradeItem.human_attribute_name(:number) %></td>
+      <td class="has-text-right"><%= TradeItem.human_attribute_name(:number) %></td>
       <td><%= @trade_item.number %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= TradeItem.human_attribute_name(:amount) %></td>
+      <td class="has-text-right"><%= TradeItem.human_attribute_name(:amount) %></td>
       <td><%= @trade_item.amount %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= TradeItem.human_attribute_name(:note) %></td>
+      <td class="has-text-right"><%= TradeItem.human_attribute_name(:note) %></td>
       <td><%= @trade_item.note %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= TradeItem.human_attribute_name(:extra) %></td>
+      <td class="has-text-right"><%= TradeItem.human_attribute_name(:extra) %></td>
       <td><%= @trade_item.extra %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= TradeItem.human_attribute_name(:status) %></td>
+      <td class="has-text-right"><%= TradeItem.human_attribute_name(:status) %></td>
       <td><%= @trade_item.status %></td>
     </tr>
   </tbody>
