--- a/app/views/factory/product_taxons/_show_table.html.erb
+++ b/app/views/factory/product_taxons/_show_table.html.erb
@@ -1,4 +1,4 @@
-<table class="ui very basic large table">
+<table class="table is-hoverable is-fullwidth">
   <thead>
     <tr>
       <th class="six wide">
@@ -9,11 +9,11 @@
   </thead>
   <tbody>
     <tr>
-      <td class="right aligned"><%= ProductTaxon.human_attribute_name(:name) %></td>
+      <td class="has-text-right"><%= ProductTaxon.human_attribute_name(:name) %></td>
       <td><%= @product_taxon.name %></td>
     </tr>
     <tr>
-      <td class="right aligned"><%= ProductTaxon.human_attribute_name(:logo) %></td>
+      <td class="has-text-right"><%= ProductTaxon.human_attribute_name(:logo) %></td>
       <td><%= @product_taxon.logo %></td>
     </tr>
   </tbody>
