--- a/app/views/factory/products/_show.html.erb
+++ b/app/views/factory/products/_show.html.erb
@@ -26,9 +26,9 @@
 <% end %>
 
 <div class="weui-btn-area">
-  <%= form_with scope: :custom, url: cart_my_customs_path, id: 'edit_custom' do |f| %>
-    <%= f.hidden_field :id, value: @product.id %>
-    <%= f.submit :product_plan_id, value: params[:product_plan_id] %>
+  <%= form_with theme: 'weui', url: add_my_cart_path, local: true do |f| %>
+    <%= f.hidden_field :good_type, value: 'Custom' %>
+    <%= f.hidden_field :good_id, value: @custom.id %>
+    <%= f.submit t('helpers.submit.submit'), class: 'weui-btn weui-btn_primary' %>
   <% end %>
-  <%= submit_tag t('helpers.submit.submit'), form: 'edit_custom', class: 'weui-btn weui-btn_primary' %>
 </div>
