change price and custom id

--- a/app/views/factory/my/customs/update_price.js.erb
+++ b/app/views/factory/my/customs/update_price.js.erb
@@ -1,2 +1,2 @@
 document.getElementById('total_price').innerText = '<%= @custom.price %>'
-//document.getElementById('part_<%= %>_label').dataset.add_controller('disable');
+document.getElementById('good_id').value = '<%= @custom.id %>'
