product taxon support logo

--- a/app/views/factory/admin/product_taxons/_form.html.erb
+++ b/app/views/factory/admin/product_taxons/_form.html.erb
@@ -3,5 +3,6 @@
   <%= render partial: 'nodes/siblings_select', locals: { f: f } %>
   <%= f.text_field :name %>
   <%= f.text_field :profit_margin %>
+  <%= f.file_field :logo %>
   <%= f.submit %>
 <% end %>
