--- a/app/views/factory/product_taxons/index.html+phone.erb
+++ b/app/views/factory/product_taxons/index.html+phone.erb
@@ -2,6 +2,7 @@
 <div class="weui-grids">
   <% @product_taxons.each do |product_taxon| %>
     <%= link_to products_path(product_taxon_id: product_taxon.id), class: 'weui-grid' do %>
+      <div class="weui-grid__icon"><%= image_tag product_taxon.logo if product_taxon.logo.attached? %></div>
       <p class="weui-grid__label"><%= product_taxon.name %></p>
     <% end %>
   <% end %>
