--- a/app/views/factory/product_taxons/_filter_form.html.erb
+++ b/app/views/factory/product_taxons/_filter_form.html.erb
@@ -1,14 +1,14 @@
 <div class="weui-search-bar" data-controller="search">
-  <%= form_with theme: nil, class: 'weui-search-bar__form', method: :get do |f| %>
+  <%= form_with theme: nil, class: 'weui-search-bar__form', method: :get, local: true do |f| %>
     <div class="weui-search-bar__box">
       <i class="weui-icon-search"></i>
-      <%= f.search_field :name, class: 'weui-search-bar__input', placeholder: '搜索', data: { target: 'search.input', action: 'search#doSearch' } %>
-      <a class="weui-icon-clear" data-action="search#hide"></a>
+      <%= f.search_field 'name-like', value: params['name-like'], class: 'weui-search-bar__input', placeholder: '搜索', data: { target: 'search.input', action: 'search#doSearch' } %>
+      <a class="weui-icon-clear" data-action="search#clear"></a>
     </div>
     <label class="weui-search-bar__label" data-target="search.label" data-action="click->search#focus">
       <i class="weui-icon-search"></i>
       <span>搜索</span>
     </label>
   <% end %>
-  <button class="weui-search-bar__cancel-btn" data-action="search#cancel">取消</button>
+  <a class="weui-search-bar__cancel-btn" data-action="search#cancel">取消</a>
 </div>
