--- a/app/views/factory/admin/products/_form.html.erb
+++ b/app/views/factory/admin/products/_form.html.erb
@@ -6,7 +6,8 @@
   <%= f.text_field :qr_prefix %>
   <%= f.number_field :reference_price %>
   <%= f.file_field :logo %>
-  <%= f.file_field :main_image %>
+  <%= f.file_field :covers, multiple: true %>
+  <%= f.file_field :images, multiple: true %>
   <%= f.text_area :description %>
   <%= f.submit %>
 <% end %>
