--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -30,9 +30,7 @@
       <td><%= product.name %></td>
       <td><%= image_tag product.logo.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' if product.logo.attached? %></td>
       <td>
-        <% product.covers.each do |cover| %>
-          <%= image_tag cover.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' %>
-        <% end %>
+        <%= render 'com/attachments/list', target: product.covers %>
       </td>
       <td><%= product.qr_prefix %></td>
       <td><%= product.price %></td>
