--- a/app/views/factory/products/_figure.html.erb
+++ b/app/views/factory/products/_figure.html.erb
@@ -1,6 +1,6 @@
 <figure class="image" data-action="touchmove->slide#move touchstart->slide#start touchend->slide#end">
   <% if cover.content_type.to_s.start_with?('video') %>
-    <%= video_tag cover.service_url, controls: true %>
+    <%= video_tag cover.service_url, controls: true, autoplay: true %>
   <% else %>
     <%= image_tag cover %>
   <% end %>
