--- a/app/views/factory/products/_show.html.erb
+++ b/app/views/factory/products/_show.html.erb
@@ -4,7 +4,7 @@
   <% end %>
 </div>
 
-<div id="sti" class="box">
+<div class="box" data-controller="sticky" style="z-index: 3;">
   <div class="has-text-danger has-text-bold">
     <span><%= @custom.price.to_money.symbol %></span>
     <span id="total_price"><%= @custom.price.to_money.to_s %></span>
@@ -21,12 +21,12 @@
       <span><%= part_taxon.name %></span>
       <span class="weui-panel__extra">选择范围：<%= part_taxon.min_select %> - <%= part_taxon.max_select %></span>
     </div>
-    <div class="weui-panel__bd" data-controller="input" data-input-order="<%= (@custom.part_ids & part_taxon.part_ids).join(',') %>" data-input-range="<%= "#{part_taxon.min_select},#{part_taxon.max_select}" %>">
+    <div class="weui-panel__bd" data-controller="custom" data-custom-order="<%= (@custom.part_ids & part_taxon.part_ids).join(',') %>" data-custom-range="<%= "#{part_taxon.min_select},#{part_taxon.max_select}" %>">
       <% part_taxon.parts.each do |part| %>
         <label class="weui-btn weui-btn_mini <%= @custom.part_ids.include?(part.id) ? 'weui-btn_primary' : 'weui-btn_default' %>" for="part_<%= part.id %>" id="part_<%= part.id %>_label">
           <span><%= part.name %></span>
           <span class="weui-btn__extra"><%= part.price %></span>
-          <%= check_box_tag 'custom[part_ids][]', part.id, @custom.part_ids.include?(part.id), data: { action: 'input#toggle' }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
+          <%= check_box_tag 'custom[part_ids][]', part.id, @custom.part_ids.include?(part.id), data: { action: 'custom#toggle' }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
         </label>
       <% end %>
     </div>
