--- a/app/views/factory/products/_show/_tab_bar.html.erb
+++ b/app/views/factory/products/_show/_tab_bar.html.erb
@@ -1,4 +1,4 @@
-<div class="weui-tabbar">
+<div class="weui-tabbar weui-tabbar_fixed">
   <%= link_to my_cart_path, class: 'weui-tabbar__item' do %>
     <i class="fas fa-shopping-cart weui-tabbar__icon">
       <span class="weui-badge"><%= current_cart_count %></span>
