--- a/app/views/factory/products/show.html.erb
+++ b/app/views/factory/products/show.html.erb
@@ -4,3 +4,9 @@
 <% end %>
 
 <%= render 'show' %>
+
+<div class="box">
+<% @product.images.each do |image| %>
+  <%= image_tag image -%>
+<% end %>
+</div>
