--- a/app/views/factory/products/_show.html.erb
+++ b/app/views/factory/products/_show.html.erb
@@ -15,13 +15,14 @@
   <h1><%= @product.name %></h1>
 </div>
 
+<div>
 <% @product.part_taxons.each do |part_taxon| %>
-  <div class="weui-panel">
-    <div class="weui-panel__hd">
+  <div class="weui-media-box weui-media-box_text">
+    <div class="weui-media-box__title">
       <span><%= part_taxon.name %></span>
       <span class="weui-panel__extra">选择范围：<%= part_taxon.min_select %> - <%= part_taxon.max_select %></span>
     </div>
-    <div class="weui-panel__bd" data-controller="custom" data-custom-order="<%= (@custom.part_ids & part_taxon.part_ids).join(',') %>" data-custom-range="<%= "#{part_taxon.min_select},#{part_taxon.max_select}" %>">
+    <div class="weui-media-box__desc" data-controller="custom" data-custom-order="<%= (@custom.part_ids & part_taxon.part_ids).join(',') %>" data-custom-range="<%= "#{part_taxon.min_select},#{part_taxon.max_select}" %>">
       <% part_taxon.parts.each do |part| %>
         <label class="weui-btn weui-btn_mini <%= @custom.part_ids.include?(part.id) ? 'weui-btn_primary' : 'weui-btn_default' %>" for="part_<%= part.id %>" id="part_<%= part.id %>_label">
           <span><%= part.name %></span>
@@ -32,4 +33,4 @@
     </div>
   </div>
 <% end %>
-
+</div>
