no more config controller

--- a/app/views/factory/my/customs/index.html.erb
+++ b/app/views/factory/my/customs/index.html.erb
@@ -27,7 +27,7 @@
             </li>
           </ul>
         </div>
-        <div class="weui-media-box__ft" data-target="swipe.open">
+        <div class="weui-media-box__ft" data-swipe-target="open">
           <%= link_to '删除', my_custom_path(custom), method: :delete, data: { confirm: t('.confirm') }, remote: true, class: 'weui-btn weui-btn_mini weui-btn_warn' %>
         </div>
       </div>
