--- a/app/views/factory/product_taxons/_filter_form.html.erb
+++ b/app/views/factory/product_taxons/_filter_form.html.erb
@@ -5,7 +5,7 @@
       <%= f.search_field 'name-like', value: params['name-like'], class: 'weui-search-bar__input', placeholder: '搜索', data: { target: 'search.input' } %>
       <a class="weui-icon-clear" data-action="search#clear"></a>
     </div>
-    <label class="weui-search-bar__label" data-target="search.label" data-action="click->search#focus">
+    <label class="weui-search-bar__label" data-search-target="label" data-action="click->search#focus">
       <i class="weui-icon-search"></i>
       <span>搜索</span>
     </label>
