--- a/app/views/factory/admin/product_taxons/_form.html.erb
+++ b/app/views/factory/admin/product_taxons/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with model: [:admin, @product_taxon] do |f| %>
   <%= render 'shared/error_messages', target: @product_taxon %>
-  <%= render partial: 'nodes/siblings_select', locals: { f: f } %>
+  <%= render partial: 'taxon/nodes/siblings_select', locals: { f: f } %>
   <%= f.text_field :name %>
   <%= f.text_field :profit_margin %>
   <%= f.file_field :logo %>
