--- a/app/views/factory/admin/parts/index.html.erb
+++ b/app/views/factory/admin/parts/index.html.erb
@@ -1,58 +1,5 @@
-<%= render 'filter_form' %>
-
-<table class="table is-hoverable is-fullwidth">
-  <thead>
-    <tr>
-      <th><%= Part.human_attribute_name(:name) %></th>
-      <th>
-        <%= Part.human_attribute_name(:part_taxon_id) %>
-        <%= link_to admin_part_taxons_path, aria: { label: '分类设置' }, target: '_blank' do %>
-          <i class="fas fa-cog"></i>
-        <% end %>
-      </th>
-      <th><%= Part.human_attribute_name(:qr_prefix) %></th>
-      <th><%= Part.human_attribute_name(:part_plans) %></th>
-      <th><%= Part.human_attribute_name(:price) %></th>
-      <th>
-        <p><%= Part.human_attribute_name(:import_price) %></p>
-        <p><%= Part.human_attribute_name(:profit_price) %></p>
-      </th>
-      <th>
-        <%= link_to new_admin_part_path, remote: true, class: 'button is-link is-small' do %>
-          <i class="fas fa-plus"></i><%= t('.new') %>
-        <% end %>
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @parts.each do |part| %>
-    <tr>
-      <td><%= part.name %></td>
-      <td><%= part.taxon_str %></td>
-      <td><%= part.qr_prefix %></td>
-      <td class="ui labels">
-        <%= link_to 'Plan', admin_part_plans_path(part), class: 'ui label' %>
-      </td>
-      <td><%= part.price %></td>
-      <td>
-        <p><%= part.import_price %></p>
-        <p><%= part.profit_price %></p>
-      </td>
-      <td>
-        <%= link_to '供应商管理', admin_good_providers_path('Part', part), class: 'button is-small is-rounded is-light' %>
-        <%= link_to admin_part_path(part), class: 'button is-small is-rounded is-light' do %>
-          <i class="fas fa-eye"></i>
-        <% end %>
-        <%= link_to edit_admin_part_path(part), aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light' do %>
-          <i class="fas fa-pencil-alt"></i>
-        <% end %>
-        <%= link_to admin_part_path(part), method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light' do %>
-          <i class="fas fa-trash-alt"></i>
-        <% end %>
-      </td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<%= render layout: 'index_table', locals: { cache_key: Part.column_names.hash } do %>
+  <%= render partial: 'index_tbody', collection: @parts, as: :part %>
+<% end %>
 
 <%= paginate @parts %>
