--- a/app/views/factory/admin/produce_plans/_new_form.html.erb
+++ b/app/views/factory/admin/produce_plans/_new_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @product_plan, url: { action: 'create' } do |f| %>
+<%= form_with model: @produce_plan, url: { action: 'create' } do |f| %>
   <%= render partial: 'form', locals: { f: f } %>
   <%= f.submit %>
 <% end %>
