--- a/app/views/factory/admin/produce_plans/index.html.erb
+++ b/app/views/factory/admin/produce_plans/index.html.erb
@@ -1,40 +1,5 @@
-<%= render 'filter_form' %>
-
-<table class="table is-hoverable is-fullwidth">
-  <thead>
-    <tr>
-      <th><%= ProducePlan.human_attribute_name(:title) %></th>
-      <th><%= ProducePlan.human_attribute_name(:start_at) %></th>
-      <th><%= ProducePlan.human_attribute_name(:finish_at) %></th>
-      <th><%= ProducePlan.human_attribute_name(:state) %></th>
-      <th>
-        <%= link_to new_admin_produce_plan_path, remote: true, class: 'button is-link is-small' do %>
-          <i class="fas fa-plus"></i><%= t('.new') %>
-        <% end %>
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @produce_plans.each do |produce_plan| %>
-    <tr>
-      <td><%= produce_plan.title %></td>
-      <td><%= produce_plan.start_at %></td>
-      <td><%= produce_plan.finish_at %></td>
-      <td><%= produce_plan.state %></td>
-      <td>
-        <%= link_to admin_produce_plan_path(produce_plan), aria: { label: t('.show') }, remote: true, class: 'button is-small is-rounded is-light' do %>
-          <i class="fas fa-eye"></i>
-        <% end %>
-        <%= link_to edit_admin_produce_plan_path(produce_plan), aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light' do %>
-          <i class="fas fa-pencil-alt"></i>
-        <% end %>
-        <%= link_to admin_produce_plan_path(produce_plan), method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light' do %>
-          <i class="fas fa-trash-alt"></i>
-        <% end %>
-      </td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<%= render layout: 'index_table', locals: { cache_key: ProducePlan.column_names.hash } do %>
+  <%= render partial: 'index_tbody', collection: @produce_plans, as: :produce_plan %>
+<% end %>
 
 <%= paginate @produce_plans %>
