--- a/app/views/factory/admin/product_taxons/index.html.erb
+++ b/app/views/factory/admin/product_taxons/index.html.erb
@@ -1,45 +1,5 @@
-<% content_for :breadcrumb do %>
-  <ul>
-    <li><%= link_to t('factory.admin.products.index.title'), admin_products_path %></li>
-    <li class="is-active"><%= t('.title') %></li>
-  </ul>
+<%= render layout: 'index_table', locals: { cache_key: ProductTaxon.column_names.hash } do %>
+  <%= render partial: 'index_tbody', collection: @product_taxons, as: :product_taxon %>
 <% end %>
-
-<%= render 'filter_form' %>
-
-<table class="table is-hoverable is-fullwidth">
-  <thead>
-    <tr>
-      <th><%= ProductTaxon.human_attribute_name(:name) %></th>
-      <th><%= ProductTaxon.human_attribute_name(:logo) %></th>
-      <th><%= ProductTaxon.human_attribute_name(:profit_margin) %></th>
-      <th>
-        <%= link_to new_admin_product_taxon_path, remote: true, class: 'button is-link is-small' do %>
-          <i class="fas fa-plus"></i><%= t('.new') %>
-        <% end %>
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @product_taxons.each do |product_taxon| %>
-    <tr>
-      <td><%= product_taxon.name %></td>
-      <td><%= image_tag product_taxon.logo, class: 'image is-32x32' if product_taxon.logo.attached? %></td>
-      <td><%= product_taxon.profit_margin %></td>
-      <td>
-        <%= link_to admin_product_taxon_path(product_taxon), aria: { label: t('.show') }, class: 'button is-small is-rounded is-light' do %>
-          <i class="fas fa-eye"></i>
-        <% end %>
-        <%= link_to edit_admin_product_taxon_path(product_taxon), aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light' do %>
-          <i class="fas fa-pencil-alt"></i>
-        <% end %>
-        <%= link_to admin_product_taxon_path(product_taxon), method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light' do %>
-          <i class="fas fa-trash-alt"></i>
-        <% end %>
-      </td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
 
 <%= paginate @product_taxons %>
