--- a/app/views/factory/admin/products/_form.html.erb
+++ b/app/views/factory/admin/products/_form.html.erb
@@ -1,13 +1,10 @@
-<%= form_with model: [:admin, @product] do |f| %>
-  <%= render 'shared/error_messages', target: @product %>
-  <%= render partial: 'taxon/nodes/outer_select', locals: { f: f, outer: 'product_taxon', node: @product.product_taxon } %>
-  <%= f.text_field :name %>
-  <%= f.collection_select :part_ids, @parts, :id, :name, { wrap: { select: 'field-body control' } }, { multiple: true, data: { controller: 'choice' } } %>
-  <%= f.text_field :qr_prefix %>
-  <%= f.number_field :reference_price %>
-  <%= f.file_field :logo %>
-  <%= render 'com/attachments/list_field', target: @product.covers, f: f %>
-  <%= render 'com/attachments/list_field', target: @product.images, f: f %>
-  <%= f.text_area :description %>
-  <%= f.submit %>
-<% end %>
+<%= render 'shared/error_messages', target: @product %>
+<%= render partial: 'com/nodes/outer_select', locals: { f: f, outer: 'product_taxon', node: @product.product_taxon } %>
+<%= f.text_field :name %>
+<%= f.collection_select :part_ids, @parts, :id, :name, { wrap: { select: 'field-body control' } }, { multiple: true, data: { controller: 'choice' } } %>
+<%= f.text_field :qr_prefix %>
+<%= f.number_field :reference_price %>
+<%= f.file_field :logo %>
+<%= render 'com/attachments/list_field', target: @product.covers, f: f %>
+<%= render 'com/attachments/list_field', target: @product.images, f: f %>
+<%= f.text_area :description %>
