--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -1,69 +1,5 @@
-<%= render 'filter_form' %>
-
-<table class="table is-hoverable is-fullwidth">
-  <thead>
-    <tr>
-      <th>
-        <%= Product.human_attribute_name(:product_taxon_id) %>
-        <%= link_to admin_product_taxons_path, aria: { label: '分类设置' }, target: '_blank' do %>
-          <i class="fas fa-cog"></i>
-        <% end %>
-      </th>
-      <th><%= Product.human_attribute_name(:name) %></th>
-      <th><%= Product.human_attribute_name(:logo) %></th>
-      <th><%= Product.human_attribute_name(:covers) %></th>
-      <th><%= Product.human_attribute_name(:qr_prefix) %></th>
-      <th><%= Product.human_attribute_name(:reference_price) %></th>
-      <th><%= Product.human_attribute_name(:parts) %></th>
-      <th></th>
-      <th>
-        <%= link_to new_admin_product_path, remote: true, class: 'button is-link is-small' do %>
-          <i class="fas fa-plus"></i><%= t('.new') %>
-        <% end %>
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @products.each do |product| %>
-    <tr>
-      <td><%= product.product_taxon&.name %></td>
-      <td><%= product.name %></td>
-      <td><%= image_tag product.logo.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' if product.logo.attached? %></td>
-      <td>
-        <%= render 'com/attachments/list', target: product.covers %>
-      </td>
-      <td><%= product.qr_prefix %></td>
-      <td><%= product.price %></td>
-      <td>
-        <table class="table is-borderless">
-          <% product.parts.each do |part| %>
-            <tr>
-              <td><span><%= link_to part.name, admin_part_path(part), remote: true %></span></td>
-              <td><%= part.price %></td>
-            </tr>
-          <% end %>
-        </table>
-      </td>
-      <td>
-        <%= link_to t('factory.admin.product_plans.index.title'), admin_product_plans_path(product), class: 'button is-small is-success' %>
-      </td>
-      <td>
-        <%= link_to admin_product_path(product), aria: { label: t('.show') }, remote: true, class: 'button is-small is-rounded is-light' do %>
-          <i class="fas fa-eye"></i>
-        <% end %>
-        <%= link_to admin_customs_path(product_id: product.id), aria: { label: t('factory.admin.customs.index.title') }, class: 'button is-small is-rounded is-light' do %>
-          <i class="fas fa-cube"></i>
-        <% end %>
-        <%= link_to edit_admin_product_path(product), aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light' do %>
-          <i class="fas fa-pencil-alt"></i>
-        <% end %>
-        <%= link_to admin_product_path(product), method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light' do %>
-          <i class="fas fa-trash-alt"></i>
-        <% end %>
-      </td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<%= render layout: 'index_table', locals: { cache_key: Product.column_names.hash } do %>
+  <%= render partial: 'index_tbody', collection: @products, as: :product %>
+<% end %>
 
 <%= paginate @products %>
