--- a/app/views/factory/admin/customs/_form.html.erb
+++ b/app/views/factory/admin/customs/_form.html.erb
@@ -1,9 +1,6 @@
-<%= form_with model: [:admin, @custom] do |f| %>
-  <%= render 'shared/error_messages', target: @custom %>
-  <%= f.text_field :name %>
-  <%= f.text_field :customer %>
-  <%= f.text_field :state %>
-  <%= f.text_field :qr_code %>
-  <%= f.datetime_field :ordered_at %>
-  <%= f.submit %>
-<% end %>
+<%= render 'shared/error_messages', target: f.object %>
+<%= f.text_field :name %>
+<%= f.text_field :customer %>
+<%= f.text_field :state %>
+<%= f.text_field :qr_code %>
+<%= f.datetime_field :ordered_at %>
