--- a/app/views/factory/admin/products/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index_tbody.html.erb
@@ -1,12 +1,15 @@
 <tr>
   <td><%= product.product_taxon&.name %></td>
-  <td><%= product.name %></td>
+  <td><%= link_to product.name, { action: 'show', id: product.id }, text: true %></td>
   <td><%= image_tag product.logo.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' if product.logo.attached? %></td>
   <td>
     <%= render 'com/attachments/list', target: product.covers %>
   </td>
   <td><%= product.qr_prefix %></td>
-  <td><%= product.price %></td>
+  <td>
+    <p><del><%= product.reference_price %></del></p>
+    <p><%= product.price %></p>
+  </td>
   <td>
     <table class="table is-borderless">
       <% product.parts.each do |part| %>
