--- a/app/views/factory/admin/products/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_index_thead.html.erb
@@ -13,10 +13,7 @@
 </th>
 <th><%= Product.human_attribute_name(:covers) %></th>
 <th><%= Product.human_attribute_name(:qr_prefix) %></th>
-<th>
-  <p><del><%= Product.human_attribute_name(:reference_price) %></del></p>
-  <p><%= Product.human_attribute_name(:price) %></p>
-</th>
+<th><%= Product.human_attribute_name(:price) %></th>
 <th><%= Product.human_attribute_name(:parts) %></th>
 <th></th>
 <th></th>
