--- a/app/views/factory/admin/customs/_show_table.html.erb
+++ b/app/views/factory/admin/customs/_show_table.html.erb
@@ -4,13 +4,9 @@
 </tr>
 <tr>
   <td class="has-text-right"><%= Custom.human_attribute_name(:state) %></td>
-  <td><%= @custom.state %></td>
+  <td><%= @custom.state_i18n %></td>
 </tr>
 <tr>
   <td class="has-text-right"><%= Custom.human_attribute_name(:qr_code) %></td>
   <td><%= @custom.qr_code %></td>
-</tr>
-<tr>
-  <td class="has-text-right"><%= Custom.human_attribute_name(:ordered_at) %></td>
-  <td><%= @custom.ordered_at %></td>
 </tr>
