--- a/app/views/factory/admin/products/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index_tbody.html.erb
@@ -6,7 +6,16 @@
     <%= render 'com/attachments/list', target: product.covers %>
   </td>
   <td><%= product.qr_prefix %></td>
-  <td><%= product.price %></td>
+  <td class="has-text-right">
+    <p><%= product.cost_price.to_s(:currency, unit: '￥') %></p>
+    <p><%= product.profit_price.to_s(:currency, unit: '￥') %></p>
+    <p><%= product.price.to_s(:currency, unit: '￥') %></p>
+  </td>
+  <td>
+    <%= link_to({ action: 'price', id: product.id }, aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light') do %>
+      <i class="fas fa-dollar-sign"></i>
+    <% end %>
+  </td>
   <td>
     <table class="table is-borderless">
       <% product.parts.each do |part| %>
@@ -22,7 +31,7 @@
   </td>
   <td>
     <%= link_to({ action: 'show', id: product.id }, aria: { label: t('.show') }, remote: true, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-eye"></i>
+      <i class="fas fa-info"></i>
     <% end %>
     <%= link_to({ controller: 'customs', product_id: product.id }, aria: { label: t('factory.admin.customs.index.title') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fas fa-cube"></i>
