--- a/app/views/factory/admin/produce_plans/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_index_tbody.html.erb
@@ -1,7 +1,9 @@
 <tr>
   <td><%= produce_plan.title %></td>
-  <td><%= produce_plan.start_at %></td>
-  <td><%= produce_plan.finish_at %></td>
+  <td>
+    <p><time><%= produce_plan.start_at.to_s(:rfc822) %></time></p>
+    <p><time><%= produce_plan.finish_at.to_s(:rfc822) %></time></p>
+  </td>
   <td><%= produce_plan.state %></td>
   <td>
     <%= link_to({ action: 'show', id: produce_plan.id }, aria: { label: t('.show') }, remote: true, class: 'button is-small is-rounded is-light') do %>
