--- a/app/views/factory/admin/products/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_index_thead.html.erb
@@ -13,7 +13,12 @@
 </th>
 <th><%= Product.human_attribute_name(:covers) %></th>
 <th><%= Product.human_attribute_name(:qr_prefix) %></th>
-<th><%= Product.human_attribute_name(:price) %></th>
+<th class="has-text-right">
+  <p><%= Product.human_attribute_name(:cost_price) %></p>
+  <p><%= Product.human_attribute_name(:profit_price) %></p>
+  <p><%= Product.human_attribute_name(:price) %></p>
+</th>
+<th></th>
 <th><%= Product.human_attribute_name(:parts) %></th>
 <th></th>
 <th></th>
