--- a/app/views/factory/admin/trade_items/_index_tbody.html.erb
+++ b/app/views/factory/admin/trade_items/_index_tbody.html.erb
@@ -6,7 +6,7 @@
   <td><%= trade_item.status %></td>
   <td>
     <%= link_to admin_trade_item_path(trade_item), aria: { label: t('.show') }, remote: true, class: 'button is-small is-rounded is-light' do %>
-      <i class="fas fa-eye"></i>
+      <i class="fas fa-info"></i>
     <% end %>
     <%= link_to edit_admin_trade_item_path(trade_item), aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light' do %>
       <i class="fas fa-pencil-alt"></i>
