--- a/app/views/factory/admin/productions/_edit_form.html.erb
+++ b/app/views/factory/admin/productions/_edit_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @custom, url: { action: 'create' } do |f| %>
+<%= form_with model: @production, url: { action: 'create' } do |f| %>
   <%= render partial: 'form', locals: { f: f } %>
   <%= f.submit %>
 <% end %>
